OERC-22: Voting-Plugin Update: making voting optional and adding a comment function.

--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/locale/de_Formal/LC_MESSAGES/django.po
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/locale/de_Formal/LC_MESSAGES/django.po
@@ -187,6 +187,14 @@ msgstr ""
 msgid "Limit to tracks"
 msgstr ""
 
+#: local/pretalx-public-voting/pretalx_public_voting/models.py:83
+msgid "Hide score"
+msgstr "Bewertungen verstecken"
+
+#: local/pretalx-public-voting/pretalx_public_voting/models.py:83
+msgid "If activated, voting will not be possible"
+msgstr "Wenn aktiviert, können Nutzer keine Bewertung für Einreichungen abgeben."
+
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:91
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:36
 msgid "Score"
