--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/locale/de_DE/LC_MESSAGES/django.po
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/locale/de_DE/LC_MESSAGES/django.po
@@ -38,10 +38,12 @@ msgstr "Diese E-Mail-Adresse kann keine Bewertungen abgeben."
 msgid ""
 "Hi,\n"
 "\n"
-"you have registered to vote for submissions for {event.name}.\n"
-"Please confirm that this email address is valid by following this link:\n"
+"you have registered to vote for submissions or submission-wishes for {event.name}.\n"
+"Please confirm that this email address is valid by following one of the following links:\n"
 "\n"
-"    {vote_url}\n"
+"    Submissions: {vote_url}\n"
+"\n"
+"    Submission-wishes: {vote_wishes_url}\n"
 "\n"
 "If you did not register for voting, you can ignore this email.\n"
 "\n"
@@ -51,11 +53,13 @@ msgid ""
 msgstr ""
 "Hi,\n"
 "\n"
-"du hast dich für die Abstimmung der Einreichungen zur {event.name} "
+"du hast dich für die Abstimmung der Einreichungen oder Einreichungswünsche zur {event.name} "
 "registriert.\n"
-"Bitte bestätige mit folgendem Link, dass deine E-Mail-Adresse korrekt ist:\n"
+"Bitte bestätige mit einem der folgenden Links, dass deine E-Mail-Adresse korrekt ist:\n"
 "\n"
-"    {vote_url}\n"
+"    Für Einreichungen: {vote_url}\n"
+"\n"
+"    Für Einreichungswünsche: {vote_wishes_url}\n"
 "\n"
 "Falls du nicht dich nicht für die Stimmabgabe registriert hast, kannst du "
 "diese E-Mail einfach ignorieren.\n"
@@ -271,9 +275,21 @@ msgstr ""
 "Diese Seite ist nicht zulässig. Bitte vergewissere dich, dass du den "
 "gesamten Link verwendet hast."
 
+#: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:59
+msgid "Here you can see all submissions and their comments."
+msgstr "Hier sehen Sie alle Einreichungen und die dazugehörigen Kommentare."
+
+#: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:107
+msgid "Public Comments"
+msgstr "Öffentliche Kommentare"
+
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:62
 msgid "Click here to sign up for voting."
 msgstr "Bitte klicke hier, um dich für die öffentliche Abstimmung anzumelden."
+
+#: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:62
+msgid "Click here to write a comment."
+msgstr "Bitte klicke hier, um ein Kommentar abzugeben."
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/thanks.html:6
 msgid "Thanks for signing up!"
