--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/locale/de_DE/LC_MESSAGES/django.po
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/locale/de_DE/LC_MESSAGES/django.po
@@ -53,13 +53,13 @@ msgid ""
 msgstr ""
 "Hi,\n"
 "\n"
-"du hast dich für die Abstimmung der Einreichungen oder Einreichungswünsche zur {event.name} "
+"du hast dich für die Abstimmung der Einreichungen oder Veranstaltungswünsche zur {event.name} "
 "registriert.\n"
 "Bitte bestätige mit einem der folgenden Links, dass deine E-Mail-Adresse korrekt ist:\n"
 "\n"
 "    Für Einreichungen: {vote_url}\n"
 "\n"
-"    Für Einreichungswünsche: {vote_wishes_url}\n"
+"    Für Veranstaltungswünsche: {vote_wishes_url}\n"
 "\n"
 "Falls du nicht dich nicht für die Stimmabgabe registriert hast, kannst du "
 "diese E-Mail einfach ignorieren.\n"
@@ -290,6 +290,10 @@ msgstr "Bitte klicke hier, um dich für die öffentliche Abstimmung anzumelden."
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:62
 msgid "Click here to write a comment."
 msgstr "Bitte klicke hier, um ein Kommentar abzugeben."
+
+#: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/public_submissionwish_list.html:59
+msgid "Here you can see all submission wishes and their comments."
+msgstr "Hier sehen Sie alle Veranstaltungswünsche und die dazugehörigen Kommentare."
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/thanks.html:6
 msgid "Thanks for signing up!"
