--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/locale/de_DE/LC_MESSAGES/django.po
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/locale/de_DE/LC_MESSAGES/django.po
@@ -53,13 +53,13 @@ msgid ""
 msgstr ""
 "Hi,\n"
 "\n"
-"du hast dich für die Abstimmung der Einreichungen oder Veranstaltungswünsche zur {event.name} "
+"du hast dich für die Abstimmung der Einreichungen oder Themenwünsche zur {event.name} "
 "registriert.\n"
 "Bitte bestätige mit einem der folgenden Links, dass deine E-Mail-Adresse korrekt ist:\n"
 "\n"
 "    Für Einreichungen: {vote_url}\n"
 "\n"
-"    Für Veranstaltungswünsche: {vote_wishes_url}\n"
+"    Für Themenwünsche: {vote_wishes_url}\n"
 "\n"
 "Falls du nicht dich nicht für die Stimmabgabe registriert hast, kannst du "
 "diese E-Mail einfach ignorieren.\n"
@@ -293,7 +293,7 @@ msgstr "Bitte klicke hier, um ein Kommentar abzugeben."
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/public_submissionwish_list.html:59
 msgid "Here you can see all submission wishes and their comments."
-msgstr "Hier sehen Sie alle Veranstaltungswünsche und die dazugehörigen Kommentare."
+msgstr "Hier sehen Sie alle Themenwünsche und die dazugehörigen Kommentare."
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/thanks.html:6
 msgid "Thanks for signing up!"
