--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/locale/de_DE/LC_MESSAGES/django.po
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/locale/de_DE/LC_MESSAGES/django.po
@@ -8,30 +8,30 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-11-03 08:44+0000\n"
-"PO-Revision-Date: 2022-01-11 17:27+0100\n"
+"PO-Revision-Date: 2024-11-07 16:27+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.5\n"
 
 #: local/pretalx-public-voting/pretalx_public_voting/apps.py:12
 msgid "pretalx public voting plugin"
-msgstr "pretalx-Plugin für die offentliche Bewertung von Einreichungen"
+msgstr "pretalx-Plugin für die öffentliche Ansicht von Einreichungen"
 
 #: local/pretalx-public-voting/pretalx_public_voting/apps.py:14
 msgid "A public voting plugin for pretalx"
-msgstr "Ein Plugin für eine öffentliche Bewertung von Einreichungen in pretalx"
+msgstr "Ein Plugin für eine öffentliche Ansicht von Einreichungen in pretalx"
 
 #: local/pretalx-public-voting/pretalx_public_voting/exporters.py:15
 msgid "Public Voting CSV"
-msgstr "CSV der öffentlichen Bewertungen"
+msgstr "CSV der öffentlichen Ansicht"
 
 #: local/pretalx-public-voting/pretalx_public_voting/forms.py:25
 msgid "This address is not allowed to cast a vote."
-msgstr "Diese E-Mail-Adresse kann keine Bewertungen abgeben."
+msgstr "Diese E-Mail-Adresse kann nicht für die Kommentarfunktion genutzt werden."
 
 #: local/pretalx-public-voting/pretalx_public_voting/forms.py:42
 #, python-brace-format
@@ -39,7 +39,8 @@ msgid ""
 "Hi,\n"
 "\n"
 "you have registered to vote for submissions or submission-wishes for {event.name}.\n"
-"Please confirm that this email address is valid by following one of the following links:\n"
+"Please confirm that this email address is valid by following one of the following "
+"links:\n"
 "\n"
 "    Submissions: {vote_url}\n"
 "\n"
@@ -53,30 +54,25 @@ msgid ""
 msgstr ""
 "Hi,\n"
 "\n"
-"du hast dich für die Abstimmung der Einreichungen oder Themenwünsche zur {event.name} "
-"registriert.\n"
-"Bitte bestätige mit einem der folgenden Links, dass deine E-Mail-Adresse korrekt ist:\n"
+"bei der Veranstaltung {event.name} möchtest du unter Einreichungen oder "
+"Themenwünschen kommentieren.\n"
+"Hier sind deine persönlichen Links, mit denen du Kommentare schreiben kannst:\n"
 "\n"
 "    Für Einreichungen: {vote_url}\n"
 "\n"
 "    Für Themenwünsche: {vote_wishes_url}\n"
 "\n"
-"Falls du nicht dich nicht für die Stimmabgabe registriert hast, kannst du "
-"diese E-Mail einfach ignorieren.\n"
-"\n"
-"Vielen Dank, dass du an der öffentlichen Abstimmung teilnimmst!\n"
-"\n"
-"Das {event.name}-Team\n"
+"Falls du die Kommentarfunktion nicht brauchst, kannst du diese E-Mail einfach "
+"ignorieren.\n"
 
 #: local/pretalx-public-voting/pretalx_public_voting/forms.py:59
 msgid "Public voting registration"
-msgstr "Registrierung zur öffentlichen Abstimmung"
+msgstr "Freischaltung der Kommentarfunktion"
 
 #: local/pretalx-public-voting/pretalx_public_voting/forms.py:97
 #, python-brace-format
 msgid "Please assign a score between {self.min_value} and {self.max_value}!"
-msgstr ""
-"Bitte wähle eine Wertung zwischen {self.min_value} und {self.max_value}!"
+msgstr "Bitte wähle eine Wertung zwischen {self.min_value} und {self.max_value}!"
 
 #: local/pretalx-public-voting/pretalx_public_voting/forms.py:119
 msgid "Score label ({})"
@@ -84,23 +80,20 @@ msgstr "Bezeichnung ({})"
 
 #: local/pretalx-public-voting/pretalx_public_voting/forms.py:121
 msgid ""
-"Human readable explanation of what a score of \"{}\" actually means, e.g. "
-"\"great!\"."
-msgstr ""
-"Menschenlesbare Erklärung, was die Wertung \"{}\" bedeutet, z.B. \"super\"."
+"Human readable explanation of what a score of \"{}\" actually means, e.g. \"great!\"."
+msgstr "Menschenlesbare Erklärung, was die Wertung \"{}\" bedeutet, z.B. \"super\"."
 
 #: local/pretalx-public-voting/pretalx_public_voting/forms.py:135
 msgid "Please assign a minimum score smaller than the maximum score!"
-msgstr ""
-"Bitte wähle eine Mindestwertung, die niedriger als die Höchstwertung ist!"
+msgstr "Bitte wähle eine Mindestwertung, die niedriger als die Höchstwertung ist!"
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:22
 msgid ""
-"No public votes will be possible before this time. Submissions will not be "
-"publicly visible."
+"No public votes will be possible before this time. Submissions will not be publicly "
+"visible."
 msgstr ""
-"Vor diesem Zeitpunkt ist keine öffentliche Abstimmung möglich. Die "
-"Einreichungen sind dann nicht öffentlich einsehbar."
+"Vor diesem Zeitpunkt ist keine öffentliche Ansicht möglich. Die Einreichungen sind "
+"dann nicht öffentlich einsehbar."
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:24
 msgid "Start"
@@ -108,11 +101,11 @@ msgstr "Beginn"
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:30
 msgid ""
-"No public votes will be possible after this time. Submissions will not be "
-"publicly visible."
+"No public votes will be possible after this time. Submissions will not be publicly "
+"visible."
 msgstr ""
-"Nach diesem Zeitpunkt ist keine öffentliche Abstimmung mehr möglich. Die "
-"Einreichungen sind dann nicht mehr öffentlich einsehbar."
+"Nach diesem Zeitpunkt ist keine öffentliche Ansicht mehr möglich. Die Einreichungen "
+"sind dann nicht mehr öffentlich einsehbar."
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:32
 msgid "End"
@@ -124,8 +117,7 @@ msgstr "Text"
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:38
 msgid "This text will be shown at the top of the public voting page."
-msgstr ""
-"Dieser Text wird ganz oben auf der öffentlichen Abstimmungsseite gezeigt."
+msgstr "Dieser Text wird ganz oben auf der Seite mit der öffentlichen Ansicht gezeigt."
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:43
 msgid "Anonymise content"
@@ -134,8 +126,7 @@ msgstr "Text anonymisieren"
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:44
 msgid "Hide speaker names and use anonymized content where available?"
 msgstr ""
-"Namen der Vortragenden verbergen und anonymisierten Text verwenden, soweit "
-"verfügbar?"
+"Namen der Mitwirkenden verbergen und anonymisierten Text verwenden, soweit verfügbar?"
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:48
 msgid "Show session image"
@@ -143,7 +134,7 @@ msgstr "Bild anzeigen"
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:49
 msgid "Show the session image if one was uploaded."
-msgstr "Wenn ein Bild zum Vortrag hochgeladen wurde, dieses anzeigen."
+msgstr "Wenn ein Bild zum Beitrag hochgeladen wurde, dieses anzeigen."
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:53
 #, fuzzy
@@ -153,9 +144,11 @@ msgstr "Bild anzeigen"
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:55
 msgid ""
-"By default, only the abstract of each session is listed. By enabling this, "
-"the longer description text will also be shown."
+"By default, only the abstract of each session is listed. By enabling this, the longer "
+"description text will also be shown."
 msgstr ""
+"Standardmäßig wird nur die Zusammenfassung jedes Beitrags angezeigt. Wenn diese "
+"Option aktiviert wird, wird auch der längere Beschreibungstext angezeigt."
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:61
 msgid "Minimum score"
@@ -179,11 +172,10 @@ msgstr "Erlaubte E-Mail-Adressen"
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:75
 msgid ""
-"You can limit who is allowed to cast a vote. Please enter one email address "
-"per line."
+"You can limit who is allowed to cast a vote. Please enter one email address per line."
 msgstr ""
-"Du kannst beschränken, wer eine Bewertung abgeben darf. Bitte gib eine "
-"Adresse pro Zeile ein."
+"Du kannst beschränken, wer die Kommentarfunktion in der öffentlichen Ansicht nutzen "
+"darf. Bitte gib eine Adresse pro Zeile ein."
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:79
 msgid "Limit to tracks"
@@ -195,7 +187,7 @@ msgstr "Bewertungen verstecken"
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:83
 msgid "If activated, voting will not be possible"
-msgstr "Wenn aktiviert, können Nutzer keine Bewertung für Einreichungen abgeben."
+msgstr "Wenn aktiviert, können Nutzer*innen keine Bewertung für Einreichungen abgeben."
 
 #: local/pretalx-public-voting/pretalx_public_voting/models.py:91
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:36
@@ -205,11 +197,11 @@ msgstr "Wertung"
 #: local/pretalx-public-voting/pretalx_public_voting/signals.py:14
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:12
 msgid "Public voting"
-msgstr "Öffentliche Abstimmung"
+msgstr "Öffentliche Ansicht"
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/settings.html:16
 msgid "Set up public voting"
-msgstr "Öffentliche Abstimmung einrichten"
+msgstr "Öffentliche Ansicht einrichten"
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/settings.html:19
 msgid "Download results CSV"
@@ -217,17 +209,17 @@ msgstr ""
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/settings.html:22
 msgid "Go to public voting"
-msgstr "Zur öffentlichen Abstimmung"
+msgstr "Zur öffentlichen Ansicht"
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/settings.html:27
 msgid ""
-"Public voting will show your submissions publicly, and will allow anybody "
-"who provides a valid email address to vote. The email addresses are not "
-"saved, so the process is anonymous."
+"Public voting will show your submissions publicly, and will allow anybody who "
+"provides a valid email address to vote. The email addresses are not saved, so the "
+"process is anonymous."
 msgstr ""
-"Die öffentliche Abstimmung zeigt alle Einreichungen öffentlich an und "
-"ermöglicht es jedem, der eine gültige E-Mail-Adresse hat, abzustimmen. E-"
-"Mail-Adressen werden nicht gespeichert. Die Abstimmung ist also anonym."
+"Die öffentliche Ansicht zeigt alle Einreichungen öffentlich an und ermöglicht es "
+"jedem, der eine gültige E-Mail-Adresse hat, Kommentare zu schreiben. E-Mail-Adressen "
+"werden nicht gespeichert. Die Abstimmung ist also anonym."
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/settings.html:44
 msgid "Save"
@@ -235,29 +227,27 @@ msgstr "Speichern"
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/signup.html:6
 msgid "Public voting signup"
-msgstr "Anmeldung zur öffentlichen Abstimmung"
+msgstr "Fast geschafft!"
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/signup.html:8
 msgid ""
-"Welcome to the voting process for this event! Voting is open to the public, "
-"and we just need to confirm your email address first. You will only need to "
-"do this once."
+"Welcome to the voting process for this event! Voting is open to the public, and we "
+"just need to confirm your email address first. You will only need to do this once."
 msgstr ""
-"Willkommen zur öffentlichen Abstimmung über die Einreichungen dieser "
-"Veranstaltung! Die Stimmabgabe steht jedem offen, wir brauchen nur deine E-"
-"Mail-Adresse."
+"Du kannst die Kommentarfunktion nutzen, nach dem du deine E-Mail-Adresse bestätigt "
+"hast."
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/signup.html:14
 msgid ""
-"Please note that we do <strong>not</strong> store your email address, and "
-"all votes will be completely anonymous."
+"Please note that we do <strong>not</strong> store your email address, and all votes "
+"will be completely anonymous."
 msgstr ""
-"Bitte beachte, dass wir deine E-Mail-Adresse <strong>nicht</strong> "
-"speichern und dass die Stimmabgabe vollständig anonym ist."
+"Bitte beachte, dass wir deine E-Mail-Adresse <strong>nicht</strong> speichern und "
+"dass die Kommentarfunktion vollständig anonym ist."
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:20
 msgid "This talk's header image"
-msgstr "Das Titelbild des Vortags"
+msgstr "Das Titelbild des Beitrags"
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:54
 msgid "Save!"
@@ -265,19 +255,19 @@ msgstr "Speichern!"
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:50
 msgid "Comments from other users"
-msgstr "Kommentare anderer Nutzer"
+msgstr "Kommentare anderer Personen"
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:59
 msgid ""
-"This page is invalid. Please double-check that you have followed a complete "
-"link to this place."
+"This page is invalid. Please double-check that you have followed a complete link to "
+"this place."
 msgstr ""
-"Diese Seite ist nicht zulässig. Bitte vergewissere dich, dass du den "
-"gesamten Link verwendet hast."
+"Diese Seite ist nicht zulässig. Bitte vergewissere dich, dass du den gesamten Link "
+"verwendet hast."
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:59
 msgid "Here you can see all submissions and their comments."
-msgstr "Hier sehen Sie alle Einreichungen und die dazugehörigen Kommentare."
+msgstr "Hier kannst du alle Einreichungen und die dazugehörigen Kommentare ansehen."
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:107
 msgid "Public Comments"
@@ -285,35 +275,34 @@ msgstr "Öffentliche Kommentare"
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:62
 msgid "Click here to sign up for voting."
-msgstr "Bitte klicke hier, um dich für die öffentliche Abstimmung anzumelden."
+msgstr "Bitte klicke hier, wenn du die Kommentarfunktion nutzen möchtest."
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:62
 msgid "Login here to give submission wishes."
-msgstr "Möchtest du einen Themenwunsch abgeben? Hier anmelden!"
+msgstr "Möchtest du einen Themenwunsch abgeben? Hier entlang!"
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submission_list.html:62
 msgid "Click here to write a comment."
-msgstr "Bitte klicke hier, um ein Kommentar abzugeben."
+msgstr "Bitte klicke hier, um einen Kommentar abzugeben."
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/public_submissionwish_list.html:59
 msgid "Here you can see all submission wishes and their comments."
-msgstr "Hier sehen Sie alle Themenwünsche und die dazugehörigen Kommentare."
+msgstr "Hier kannst du alle Themenwünsche und die dazugehörigen Kommentare ansehen."
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/thanks.html:6
 msgid "Thanks for signing up!"
-msgstr "Vielen Dank für deine Anmeldung!"
+msgstr "Vielen Dank!"
 
 #: local/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/thanks.html:8
 msgid ""
-"Thanks for signing up for public voting. You've received an email with your "
-"personal link to the vote. If you don't see an email within five minutes, "
-"please also check your spam folder."
+"Thanks for signing up for public voting. You've received an email with your personal "
+"link to the vote. If you don't see an email within five minutes, please also check "
+"your spam folder."
 msgstr ""
-"Vielen Dank für deine Anmeldung zur öffentlichen Abstimmung. Du hast soeben "
-"eine E-Mail erhalten, die deinen persönlichen Link zur Stimmabgabe enthält. "
-"Falls du innerhalb von fünf Minuten keine E-Mail erhalten hast, guck bitte "
-"im Spam nach!"
+"Deine Eingabe war erfolgreich! Du hast soeben eine E-Mail erhalten, die deine "
+"persönlichen Links enthält. Falls du innerhalb von fünf Minuten keine E-Mail erhalten "
+"hast, guck bitte im Spam nach!"
 
 #: local/pretalx-public-voting/pretalx_public_voting/views.py:138
 msgid "Thank you for your vote!"
-msgstr "Vielen Dank für deine Stimmabgabe!"
+msgstr "Vielen Dank!"
