--- a/src/pretalx/locale/de_DE/LC_MESSAGES/django.po
+++ b/src/pretalx/locale/de_DE/LC_MESSAGES/django.po
@@ -3261,6 +3261,10 @@ msgid "Provide the identifier for the postcode participant list question."
 msgstr "Geben Sie hier die Pretix-Fragen-Id ein für den Teilnahmelisten PLZ."
 
 #: pretalx/orga/forms/event.py:168
+msgid "Provide the comma-seperated question-identifiers that should be added in the survey merger."
+msgstr "Geben Sie hier die Komma-getrennte Liste an Pretix-Fragen-Ids ein, die im Survey-Merger eingebunden werden sollen."
+
+#: pretalx/orga/forms/event.py:168
 msgid "Provide the identifier for the city participant list question."
 msgstr "Geben Sie hier die Pretix-Fragen-Id ein für den Teilnahmelisten Ort."
 
@@ -3311,6 +3315,10 @@ msgstr "Teilnahmeliste: Pretix-Frage-ID PLZ"
 #: pretalx/orga/forms/event.py:168
 msgid "Participant list: question-id city"
 msgstr "Teilnahmeliste: Pretix-Frage-ID Ort"
+
+#: pretalx/orga/forms/event.py:168
+msgid "Survey Merger: question-id whitelist"
+msgstr "Survey Merger: Pretix-Fragen-IDs"
 
 #: pretalx/orga/forms/event.py:168
 msgid "Provide the Venueless Base-Url (without https/protocol)"
