--- a/src/pretalx/locale/de_DE/LC_MESSAGES/django.po
+++ b/src/pretalx/locale/de_DE/LC_MESSAGES/django.po
@@ -3128,7 +3128,7 @@ msgstr "Link zur Veranstaltungs-Webseite"
 
 #: pretalx/orga/forms/event.py:168
 msgid "Show Pretix shop button"
-msgstr "Zeige Pretix Anmeldungs-Button."
+msgstr "Zeige den Anmeldebutton."
 
 #: pretalx/orga/forms/event.py:145
 #, python-brace-format
